# AlphaMiner

./: .gitignore  CMakeLists.txt  CMakeLists.txt.windows  QUICKSTART-GPU-TEST.md  README-Windows.md  README.md  RELEASE-GPU-HYBRID.md  RELEASE-STRATEGY.md  WINDOWS-TEST-NOW.md  config.json  install-gpu.bat  package-windows.sh  run.bat  uninstall.bat
releases/v1.0.2/: SHA256SUMS-v1.0.2.txt
releases/v1.0.3/: SHA256SUMS-v1.0.3.txt
scripts/: build-gpu-linux.sh  run-gpu-test.sh
src/: AlphaMiner.cpp  K12AndKeyUtil.h
src/cuda/: gpu_miner.cu  gpu_miner.h  mining_kernel.cu  mining_kernel.cuh
